added links and styled homepage

--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>👩🏼‍💻 Bethani Moorhouse - Portfolio</title>
   </head>
   <body>
-    <h1>Bethani Moorhouse</h1>
-    <h2>Web developer, based in Europe</h2>
-    <button>Contact Me</button>
-    <button>About Me</button>
+    <div class="container">
+      <div class="taskbar">
+        <div class="taskbar-link"><a href="#">Portfolio</a></div>
+        <div class="taskbar-link"><a href="about.html">About</a></div>
+        <div class="taskbar-link">
+          <a href="mailto:bethanimariemoor@icloud.com">Contact Me</a>
+        </div>
+      </div>
+      <h1>I'm <span class="my-name">Bethani Moorhouse</span></h1>
+      <h2>an aspiring web developer based in the United Kingdom.</h2>
+      <p><a href="#">Check out my work &#8964;</a></p>
+    </div>
+    <script src="src/script.js"></script>
   </body>
 </html>
