--- a/about.html
+++ b/about.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>About Me</h1>
-    <button>Contact Me</button>
+    <a href="index.html">Back to homepage</a>
   </body>
 </html>
