changed some styling and added necessary padding/margins etc

--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
   <body>
     <div class="container">
       <div class="taskbar">
-        <div class="taskbar-link"><a href="#">Portfolio</a></div>
         <div class="taskbar-link"><a href="about.html">About</a></div>
         <div class="taskbar-link">
           <a href="mailto:bethanimariemoor@icloud.com">Contact Me</a>
         </div>
       </div>
-      <h1>I'm <span class="my-name">Bethani Moorhouse</span></h1>
+      <h1>I'm <span class="my-name">Bethani Moorhouse, </span></h1>
       <h2>an aspiring web developer based in the United Kingdom.</h2>
-      <p><a href="#">Check out my work &#8964;</a></p>
+      <p class="work-link">
+        <a href="#">Check out my work <span class="arrow">&#8964;</span></a>
+      </p>
     </div>
     <script src="src/script.js"></script>
   </body>
