added portfolio page and applied bootstrap css to all pages

--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -10,26 +10,19 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="src/style.css" />
-    <title>👩🏼‍💻 Bethani Moorhouse - Portfolio</title>
+    <link rel="stylesheet" href="../src/style.css" />
+    <title>Portfolio</title>
   </head>
   <body>
     <div class="container">
       <div class="taskbar">
-        <div class="taskbar-link">
-          <a href="projects/portfolio.html">Portfolio</a>
-        </div>
-        <div class="taskbar-link"><a href="about.html">About</a></div>
+        <div class="taskbar-link"><a href="../index.html">Home</a></div>
+        <div class="taskbar-link"><a href="../about.html">About</a></div>
         <div class="taskbar-link">
           <a href="mailto:bethanimariemoor@icloud.com">Contact Me</a>
         </div>
       </div>
-      <h1>I'm <span class="my-name">Bethani Moorhouse, </span></h1>
-      <h2>an aspiring web developer based in the United Kingdom.</h2>
-      <p class="work-link">
-        <a href="#">Check out my work <span class="arrow">&#8964;</span></a>
-      </p>
+      <h1>My Portfolio</h1>
     </div>
-    <script src="src/script.js"></script>
   </body>
 </html>
