Changed all links to one easy to navigate homepage

--- a/index.html
+++ b/index.html
@@ -14,21 +14,36 @@
     <title>👩🏼‍💻 Bethani Moorhouse - Portfolio</title>
   </head>
   <body>
-    <div class="container">
-      <div class="taskbar">
-        <div class="taskbar-link">
-          <a href="projects/portfolio.html">Portfolio</a>
+    <div class="container-fluid">
+      <div class="header">
+        <div class="taskbar">
+          <div class="taskbar-link">
+            <a href="#">Portfolio</a>
+          </div>
+          <div class="taskbar-link"><a href="#">About</a></div>
+          <div class="taskbar-link"><a href="#">Resume</a></div>
+          <div class="taskbar-link">
+            <a href="mailto:bethanimariemoor@icloud.com">Contact Me</a>
+          </div>
         </div>
-        <div class="taskbar-link"><a href="about.html">About</a></div>
-        <div class="taskbar-link">
-          <a href="mailto:bethanimariemoor@icloud.com">Contact Me</a>
-        </div>
+        <h1>Bethani Moorhouse</h1>
+        <h2>Web developer based in the United Kingdom.</h2>
+        <p class="work-link">
+          <a href="#">Check out my work <span class="arrow">&#8964;</span></a>
+        </p>
       </div>
-      <h1>I'm <span class="my-name">Bethani Moorhouse, </span></h1>
-      <h2>an aspiring web developer based in the United Kingdom.</h2>
-      <p class="work-link">
-        <a href="#">Check out my work <span class="arrow">&#8964;</span></a>
+      <p>
+        Hello! My name is Bethani. My interest in Technology began in 2014 when
+        I found a passion for 3D modelling using software such as Blender and
+        ZBrush. Through becoming a part of this community, I found a love for
+        sharing creativity, problem-solving and setting challenges for myself. I
+        naturally found myself learning HTML & CSS to create my own designs and
+        bring them to life on a once blank webpage.
       </p>
+      <br />
+      Through SheCodes, I had an opportunity to learn more about coding in a
+      fun, inspiring way within a very supportive community. My current focus is
+      continuing to build knowledge and experience of coding.
     </div>
     <script src="src/script.js"></script>
   </body>
