--- a/index.html
+++ b/index.html
@@ -20,30 +20,38 @@
           <div class="taskbar-link">
             <a href="#">Portfolio</a>
           </div>
-          <div class="taskbar-link"><a href="#">About</a></div>
+          <div class="taskbar-link"><a href="#about">About</a></div>
           <div class="taskbar-link"><a href="#">Resume</a></div>
           <div class="taskbar-link">
             <a href="mailto:bethanimariemoor@icloud.com">Contact Me</a>
           </div>
         </div>
         <h1>Bethani Moorhouse</h1>
-        <h2>Web developer based in the United Kingdom.</h2>
+        <h2>Aspiring web developer.</h2>
         <p class="work-link">
           <a href="#">Check out my work <span class="arrow">&#8964;</span></a>
         </p>
       </div>
-      <p>
-        Hello! My name is Bethani. My interest in Technology began in 2014 when
-        I found a passion for 3D modelling using software such as Blender and
-        ZBrush. Through becoming a part of this community, I found a love for
-        sharing creativity, problem-solving and setting challenges for myself. I
-        naturally found myself learning HTML & CSS to create my own designs and
-        bring them to life on a once blank webpage.
-      </p>
-      <br />
-      Through SheCodes, I had an opportunity to learn more about coding in a
-      fun, inspiring way within a very supportive community. My current focus is
-      continuing to build knowledge and experience of coding.
+      <div class="section">
+        <h3 id="about">About Me</h3>
+        <img src="images/mypicture.png" alt="Bethani Moorhouse" />
+        <p>
+          Hello! My name is Bethani. My interest in Technology began in 2014
+          when I found a passion for 3D modelling using software such as Blender
+          and ZBrush. Through this, I had found a passion for sharing
+          creativity, problem-solving and setting challenges for myself. I
+          naturally found myself wanting to learn everything there is to know
+          about coding!
+          <br />
+          <br />
+          Finding SheCodes and being a full-time coding student has given me the
+          opportunity to learn more about coding in a fun, inspiring way within
+          a very supportive community. My current focus is continuing to build
+          knowledge and experience of coding languages, frameworks and many more
+          amazing things as well as beginning freelance work.
+        </p>
+        <button class="mt-5">Read more!</button>
+      </div>
     </div>
     <script src="src/script.js"></script>
   </body>
