changed image, updated 'About Me' added some styling to 'About Me'

--- a/index.html
+++ b/index.html
@@ -34,23 +34,26 @@
       </div>
       <div class="section">
         <h3 id="about">About Me</h3>
-        <img src="images/mypicture.png" alt="Bethani Moorhouse" />
-        <p>
-          Hello! My name is Bethani. My interest in Technology began in 2014
-          when I found a passion for 3D modelling using software such as Blender
-          and ZBrush. Through this, I had found a passion for sharing
-          creativity, problem-solving and setting challenges for myself. I
-          naturally found myself wanting to learn everything there is to know
-          about coding!
-          <br />
-          <br />
-          Finding SheCodes and being a full-time coding student has given me the
-          opportunity to learn more about coding in a fun, inspiring way within
-          a very supportive community. My current focus is continuing to build
-          knowledge and experience of coding languages, frameworks and many more
-          amazing things as well as beginning freelance work.
-        </p>
-        <button class="mt-5">Read more!</button>
+        <img src="images/mypicture.jpeg" alt="Bethani Moorhouse" />
+        <div class="about-text">
+          <p>
+            Hello! My name is Bethani. My interest in Technology began in 2014
+            when I found a passion for 3D modelling using software such as
+            Blender and ZBrush. Through this, I had pursued my interests in
+            sharing creativity, problem-solving and setting challenges for
+            myself. I naturally found myself wanting to learn everything there
+            is to know about coding!
+            <br />
+            <br />
+            Finding SheCodes and being a full-time coding student has given me
+            the opportunity to learn more about coding in a fun, inspiring way
+            within a very supportive community. My current focus is continuing
+            to build knowledge and experience of coding as well as beginning
+            freelance work.
+          </p>
+          <h4>Skills</h4>
+        </div>
+        <button class="btn mt-3">Read more!</button>
       </div>
     </div>
     <script src="src/script.js"></script>
