--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             <a href="#">Portfolio</a>
           </div>
           <div class="taskbar-link"><a href="#about">About</a></div>
-          <div class="taskbar-link"><a href="#">Resume</a></div>
+          <div class="taskbar-link">
+            <a href="resume/Bethani-Moorhouse-CV.pdf">Resume</a>
+          </div>
           <div class="taskbar-link">
             <a href="mailto:bethanimariemoor@icloud.com">Contact Me</a>
           </div>
