--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </div>
           <div class="taskbar-link"><a href="#about">About</a></div>
           <div class="taskbar-link">
-            <a href="resume/Bethani-Moorhouse-CV.pdf">Resume</a>
+            <a href="resume/Bethani-Moorhouse-CV.pdf" target="_blank">Resume</a>
           </div>
           <div class="taskbar-link">
             <a href="mailto:bethanimariemoor@icloud.com">Contact Me</a>
