--- a/index.html
+++ b/index.html
@@ -11,55 +11,95 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="src/style.css" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
     <title>👩🏼‍💻 Bethani Moorhouse - Portfolio</title>
   </head>
   <body>
-    <div class="container-fluid">
-      <div class="header">
-        <div class="taskbar">
-          <div class="taskbar-link">
-            <a href="#">Portfolio</a>
-          </div>
-          <div class="taskbar-link"><a href="#about">About</a></div>
-          <div class="taskbar-link">
-            <a href="resume/Bethani_Moorhouse_CV_4.pdf" target="_blank"
-              >Resume</a
-            >
-          </div>
-          <div class="taskbar-link">
-            <a href="mailto:bethanimariemoor@icloud.com">Contact Me</a>
-          </div>
+    <!--navigation-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">Bethani Moorhouse</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="resume/Bethani_Moorhouse_CV_4.pdf"
+                target="_blank"
+                >Resume</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="mailto:bethanimariemoor@icloud.com"
+                >Contact</a
+              >
+            </li>
+          </ul>
         </div>
-        <h1>Bethani Moorhouse</h1>
-        <h2>Aspiring web developer.</h2>
-        <p class="work-link">
-          <a href="#">Check out my work <span class="arrow">&#8964;</span></a>
-        </p>
       </div>
-      <div class="section">
-        <h3 id="about">About Me</h3>
-        <img src="images/mypicture.jpeg" alt="Bethani Moorhouse" />
-        <div class="about-text">
-          <p>
-            Hello! My name is Bethani. My interest in Technology began in 2014
-            when I found a passion for 3D modelling using software such as
-            Blender and ZBrush. Through this, I had pursued my interests in
-            sharing creativity, problem-solving and setting challenges for
-            myself. I naturally found myself wanting to learn everything there
-            is to know about coding!
-            <br />
-            <br />
-            Finding SheCodes and being a full-time coding student has given me
-            the opportunity to learn more about coding in a fun, inspiring way
-            within a very supportive community. My current focus is continuing
-            to build knowledge and experience of coding as well as beginning
-            freelance work.
-          </p>
-          <h4>Skills</h4>
+    </nav>
+    <!--header-->
+    <div class="header">
+      <h1>
+        Bethani Moorhouse <br />
+        Aspiring Front End Developer.
+      </h1>
+      <p class="work-link">
+        <a href="#">Check out my work <span class="arrow">&#8964;</span></a>
+      </p>
+    </div>
+    <!--about me section-->
+    <div class="section">
+      <h2 id="about">About Me</h2>
+      <div class="row">
+        <div class="col-md-6 mb-5">
+          Hello! My name is Bethani. My interest in Technology began in 2014
+          when I found a passion for 3D modelling using software such as Blender
+          and ZBrush. Through this, I had pursued my interests in sharing
+          creativity, problem-solving and setting challenges for myself. I
+          naturally found myself wanting to learn everything there is to know
+          about coding!
+          <br />
+          <br />
+          Finding SheCodes and being a full-time coding student has given me the
+          opportunity to learn more about coding in a fun, inspiring way within
+          a very supportive community. My current focus is continuing to build
+          knowledge and experience of coding as well as beginning freelance
+          work.
         </div>
-        <button class="btn mt-3">Read more!</button>
+        <div class="col-md-6 d-flex justify-content-evenly">
+          <img
+            src="images/mypicture.jpeg"
+            alt="Bethani Moorhouse"
+            class="img-fluid rounded shadow-sm"
+          />
+        </div>
       </div>
     </div>
+    <!--projects-->
     <script src="src/script.js"></script>
   </body>
 </html>
