--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   </head>
   <body>
     <!--navigation-->
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html">Bethani Moorhouse</a>
@@ -34,7 +35,10 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html"
@@ -42,7 +46,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
               <a
@@ -61,45 +65,55 @@
         </div>
       </div>
     </nav>
+
     <!--header-->
+
     <div class="header">
-      <h1>
-        Bethani Moorhouse <br />
-        Aspiring Front End Developer.
-      </h1>
-      <p class="work-link">
-        <a href="#">Check out my work <span class="arrow">&#8964;</span></a>
-      </p>
-    </div>
-    <!--about me section-->
-    <div class="section">
-      <h2 id="about">About Me</h2>
-      <div class="row">
-        <div class="col-md-6 mb-5">
-          Hello! My name is Bethani. My interest in Technology began in 2014
-          when I found a passion for 3D modelling using software such as Blender
-          and ZBrush. Through this, I had pursued my interests in sharing
-          creativity, problem-solving and setting challenges for myself. I
-          naturally found myself wanting to learn everything there is to know
-          about coding!
-          <br />
-          <br />
-          Finding SheCodes and being a full-time coding student has given me the
-          opportunity to learn more about coding in a fun, inspiring way within
-          a very supportive community. My current focus is continuing to build
-          knowledge and experience of coding as well as beginning freelance
-          work.
-        </div>
-        <div class="col-md-6 d-flex justify-content-evenly">
-          <img
-            src="images/mypicture.jpeg"
-            alt="Bethani Moorhouse"
-            class="img-fluid rounded shadow-sm"
-          />
+      <div class="container">
+        <h1 class="slide-in-text">
+          Bethani Moorhouse <br />
+          Aspiring Front End Developer.
+        </h1>
+        <div class="pt-5">
+          <a href="#">Check out my work <span class="arrow">&#8964;</span></a>
         </div>
       </div>
     </div>
+
+    <!--about me section-->
+
+    <div class="section">
+      <div class="container">
+        <h2 class="pb-3 pt-5" id="about">About Me</h2>
+        <div class="row">
+          <div class="col-md-6 mb-5">
+            Hello! My name is Bethani. My interest in Technology began in 2014
+            when I found a passion for 3D modelling using software such as
+            Blender and ZBrush. Through this, I had pursued my interests in
+            sharing creativity, problem-solving and setting challenges for
+            myself. I naturally found myself wanting to learn everything there
+            is to know about coding!
+            <br />
+            <br />
+            Finding SheCodes and being a full-time coding student has given me
+            the opportunity to learn more about coding in a fun, inspiring way
+            within a very supportive community. My current focus is continuing
+            to build knowledge and experience of coding as well as beginning
+            freelance work.
+          </div>
+          <div class="col-md-6 d-flex justify-content-evenly">
+            <img
+              src="images/mypicture.jpeg"
+              alt="Bethani Moorhouse"
+              class="img-fluid rounded shadow-sm"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!--projects-->
+
     <script src="src/script.js"></script>
   </body>
 </html>
