updated header and added media query

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
     <div class="header">
       <div class="container">
-        <h1 class="slide-in-text">
-          Bethani Moorhouse <br />
+        <h1>
+          <div class="my-name">Bethani Moorhouse</div>
           Aspiring Front End Developer.
         </h1>
         <div class="pt-5">
