--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="mailto:bethanimariemoor@icloud.com"
                 >Contact</a
               >
