--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Bethani Moorhouse, Front-End Developer Portfolio"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -16,14 +20,16 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <title>👩🏼‍💻 Bethani Moorhouse - Portfolio</title>
+    <title>👩🏼‍💻 Bethani Moorhouse - Front-End Developer Portfolio</title>
   </head>
   <body>
     <!--navigation-->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Bethani Moorhouse</a>
+        <a class="navbar-brand" href="index.html" title="Homepage"
+          >Bethani Moorhouse</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -41,26 +47,34 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="index.html"
+                title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link" href="#about" title="About Me">About</a>
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
                 href="resume/Bethani_Moorhouse_CV_4.pdf"
                 target="_blank"
+                title="Resume"
                 >Resume</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link" href="#" title="Projects">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="mailto:bethanimariemoor@icloud.com"
+              <a
+                class="nav-link"
+                href="mailto:bethanimariemoor@icloud.com"
+                title="Contact me"
                 >Contact</a
               >
             </li>
@@ -78,7 +92,9 @@
           Aspiring Front End Developer.
         </h1>
         <div class="pt-5">
-          <a href="#">Check out my work <span class="arrow">&#8964;</span></a>
+          <a href="#" title="Scroll to projects"
+            >Check out my work <span class="arrow">&#8964;</span></a
+          >
         </div>
       </div>
     </div>
