--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/657778413b.js"
+      crossorigin="anonymous"
+    ></script>
     <title>👩🏼‍💻 Bethani Moorhouse - Front-End Developer Portfolio</title>
   </head>
   <body>
     <!--navigation-->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg fixed-top nav-gradient shadow-sm">
       <div class="container">
         <a class="navbar-brand" href="index.html" title="Homepage"
           >Bethani Moorhouse</a
@@ -68,7 +72,9 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" title="Projects">Portfolio</a>
+              <a class="nav-link" href="#projects" title="Projects"
+                >Portfolio</a
+              >
             </li>
             <li class="nav-item">
               <a
@@ -92,7 +98,7 @@
           Aspiring Front End Developer.
         </h1>
         <div class="pt-5">
-          <a href="#" title="Scroll to projects"
+          <a href="#projects" title="Scroll to projects"
             >Check out my work <span class="arrow">&#8964;</span></a
           >
         </div>
@@ -106,25 +112,35 @@
         <h2 class="pb-3 pt-5" id="about">About Me</h2>
         <div class="row">
           <div class="col-md-6 mb-5">
-            Hello! My name is Bethani. My interest in Technology began in 2014
-            when I found a passion for 3D modelling using software such as
-            Blender and ZBrush. Through this, I had pursued my interests in
-            sharing creativity, problem-solving and setting challenges for
-            myself. I naturally found myself wanting to learn everything there
-            is to know about coding!
-            <br />
-            <br />
-            Finding SheCodes and being a full-time coding student has given me
-            the opportunity to learn more about coding in a fun, inspiring way
-            within a very supportive community. My current focus is continuing
-            to build knowledge and experience of coding as well as beginning
-            freelance work.
+            <p>
+              Hello! My name is Bethani. My interest in Technology began in 2014
+              when I found a passion for 3D modelling using software such as
+              Blender and ZBrush. Through this, I had pursued my interests in
+              sharing creativity, problem-solving and setting challenges for
+              myself. I naturally found myself wanting to learn everything there
+              is to know about coding!
+              <br />
+              <br />
+              Finding SheCodes and being a full-time coding student has given me
+              the opportunity to learn more about coding in a fun, inspiring way
+              within a very supportive community. My current focus is continuing
+              to build knowledge and experience of coding as well as beginning
+              freelance work.
+            </p>
+            <h3>Skills</h3>
+            <div class="skills">
+              <i class="fa-brands fa-html5 pe-3"></i>
+              <i class="fa-brands fa-css3-alt pe-3"></i>
+              <i class="fa-brands fa-square-js pe-3"></i>
+              <i class="fa-brands fa-bootstrap pe-3"></i>
+              <i class="fa-brands fa-react pe-3"></i>
+            </div>
           </div>
-          <div class="col-md-6 d-flex justify-content-evenly">
+          <div class="col-md-6 d-flex justify-content-evenly mb-5">
             <img
               src="images/mypicture.jpeg"
               alt="Bethani Moorhouse"
-              class="img-fluid rounded shadow-sm"
+              class="d-none d-md-block img-fluid rounded shadow-sm"
             />
           </div>
         </div>
@@ -133,6 +149,9 @@
 
     <!--projects-->
 
+    <div class="projects" id="projects">
+      <div class="container"></div>
+    </div>
     <script src="src/script.js"></script>
   </body>
 </html>
