imported font for header and changed navbar

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
   <body>
     <!--navigation-->
 
-    <nav class="navbar navbar-expand-lg fixed-top nav-gradient shadow-sm">
+    <nav
+      class="navbar navbar-expand-lg navbar-light bg-light fixed-top nav-gradient shadow-sm"
+    >
       <div class="container">
         <button
           class="navbar-toggler"
