Added portfolio section, beginning to design cards

--- a/index.html
+++ b/index.html
@@ -148,8 +148,90 @@
 
     <!--projects-->
 
-    <div class="projects" id="projects">
-      <div class="container"></div>
+    <div class="projects shadow-md" id="projects">
+      <div class="container">
+        <!--weather app card-->
+
+        <div class="row">
+          <div class="col-md-6 d-flex justify-content-evenly pt-5">
+            <div class="card" style="width: 18rem">
+              <img
+                class="card-img-top"
+                src="/images/live-weather-app.png"
+                alt="Live Weather App Thumbnail"
+                title="Live Weather App - Netlify"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Weather App</h5>
+                <p class="card-text">
+                  A live weather app created using HTML, CSS & JavaScript as
+                  well as an integrated API.
+                </p>
+                <a href="#" class="btn btn-primary">See Project</a>
+              </div>
+            </div>
+          </div>
+
+          <!--hobbies card-->
+
+          <div class="col-md-6 d-flex justify-content-evenly pt-5">
+            <div class="card" style="width: 18rem">
+              <img class="card-img-top" src="..." alt="Card image cap" />
+              <div class="card-body">
+                <h5 class="card-title">Hobby Webpage</h5>
+                <p class="card-text">
+                  A webpage built using HTML using transforms, links and styled
+                  with advanced CSS. Using advanced JavaScript for a changing
+                  theme.
+                </p>
+                <a href="#" class="btn btn-primary">See Project</a>
+              </div>
+            </div>
+          </div>
+
+          <!--another project-->
+
+          <div class="col-md-6 d-flex justify-content-evenly pt-5">
+            <div class="card" style="width: 18rem">
+              <img
+                class="card-img-top"
+                src="/images/world-clock.png"
+                alt="World Clock App Thumbnail"
+                title="World Clock App - Netlify"
+              />
+              <div class="card-body">
+                <h5 class="card-title">World Clock App</h5>
+                <p class="card-text">
+                  A world clock app using advanced HTML, CSS & JavaScript as
+                  well as JS libraries.
+                </p>
+                <a
+                  href="https://shecodes-timezone-project.netlify.app/"
+                  class="btn btn-primary"
+                  target="_blank"
+                  >See Project</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <!--another project-->
+
+          <div class="col-md-6 d-flex justify-content-evenly pt-5">
+            <div class="card" style="width: 18rem">
+              <img class="card-img-top" src="..." alt="Card image cap" />
+              <div class="card-body">
+                <h5 class="card-title">Project-4</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">See Project</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="src/script.js"></script>
   </body>
