adding padding bottom to cards

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <!--weather app card-->
 
         <div class="row">
-          <div class="col-md-6 d-flex justify-content-evenly pt-5">
+          <div class="col-md-6 d-flex justify-content-evenly pt-5 pb-5">
             <div class="card" style="width: 18rem">
               <img
                 class="card-img-top"
@@ -179,7 +179,7 @@
 
           <!--World Clock App-->
 
-          <div class="col-md-6 d-flex justify-content-evenly pt-5">
+          <div class="col-md-6 d-flex justify-content-evenly pt-5 pb-5">
             <div class="card" style="width: 18rem">
               <img
                 class="card-img-top"
