added footer and links to github and linkedin

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
               Finding SheCodes and being a full-time coding student has given me
               the opportunity to learn more about coding in a fun, inspiring way
               within a very supportive community. My current focus is continuing
-              to build knowledge and experience of coding as well as beginning
-              freelance work.
+              to build knowledge and experience of coding as well as beginning a
+              role as Junior Front End Developer.
             </p>
             <h3>Skills</h3>
             <div class="skills">
@@ -168,7 +168,7 @@
                 </p>
                 <a
                   href="https://live-weather-app-bethani.netlify.app/"
-                  class="btn btn-primary"
+                  class="btn btn-primary button-colour"
                   target="_blank"
                   title="Live Weather App - Netlify"
                   >See Project</a
@@ -194,7 +194,7 @@
                 </p>
                 <a
                   href="https://shecodes-timezone-project.netlify.app/"
-                  class="btn btn-primary"
+                  class="btn btn-primary button-colour"
                   target="_blank"
                   title="Live Weather App - Netlify"
                   >See Project</a
@@ -205,6 +205,32 @@
         </div>
       </div>
     </div>
+    <!--footer-->
+
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6 pt-2">
+            <p>Bethani Moorhouse | Hosted with Netlify</p>
+          </div>
+          <div class="col-sm-6 pt-2 d-flex justify-content-end">
+            <a
+              href="https://github.com/bethanimoor"
+              target="_blank"
+              title="GitHub"
+              ><i class="fa-brands fa-github pe-3 font-links"></i
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/bethani-moorhouse-bb740928a/"
+              target="_blank"
+              title="LinkedIn"
+              ><i class="fa-brands fa-linkedin font-links"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="src/script.js"></script>
   </body>
 </html>
