--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <div class="projects shadow-md" id="projects">
       <div class="container">
         <!--weather app card-->
-
+        <h4 class="pt-5">Projects</h4>
         <div class="row">
           <div class="col-md-6 d-flex justify-content-evenly pt-5 pb-5">
             <div class="card" style="width: 18rem">
